hphp/test/zend/bad/Zend/tests/bug36303.php
<?php
$x="test";
foreach($x->a->b as &$v) {
}
echo "ok\n";
?>